updated style (fixed layout bug)

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 .main {
     margin-top: 115px;
     display: inline-flex;
+    width: 100%;
 }
 
 .editor {
